# autonomous-small-model-exploration

./: .gitignore  .gitmodules  AGENTS.md  README.md  claims.md  gems.md  progress.md  pyproject.toml  requirements.txt  threats.md
config/: compute.yaml  experiment_plan.yaml  model.yaml  plotting.yaml  tasks.yaml  thresholds.yaml  training_plan.yaml
configs/: P2-DEOBF-001_config.json  P2-ROBUST-001_config.json  P2-SCALE3-001_config.json  P2-SURGERY-001_config.json  experiment_defaults.yaml  models.yaml  tasks.yaml
docs/: 01-qwen05b-analysis.html  02-qwen15b-analysis.html  03-comparison-analysis.html  04-qualitative-analysis.html  05-phase2-repeatability.html  06-phase3-gap-closure.html  07-lfm2-230m-atlas.html  08-lfm2-230m-sft-sweep.html  09-data-format-ablation.html  13-stochastic-inference.html  14-sft-deep-dive.html  RESEARCH_PROMPT.md  index.html  lfm2-230m-architecture.md  mi-atlas.html  phase10-11-12-design.md  phase13-ptrm-noise-injection-design.md  rag-benchmark.html
experiments/: index.jsonl  registry.jsonl
reports/: 09-data-format-ablation.md  artifact_index.md  blog_post_outline.md  component_atlas.jsonl  component_atlas.md  current_findings.md  decision_log.md  final_report.md  lfm2-230m-head-findings.md  lfm2-230m-phase1-findings.md  limitations.md  negative_results.md  open_hypotheses.md  paper_outline.md  phase13-ptrm-results.md  phase3_gap_closure.md  phase3_key_findings.md  publication_report.md  replication_status.md  report_1.5b.md  report_comparison.md
scripts/: analyze_saes.py  build_aligned_pairs.py  build_component_atlas.py  (+92 more)
(+531 files in other folders)
